--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-amethyst = { version = "0.15.3", features = ["vulkan"] }
-rand = "0.7.3"
+eframe = "0.27.2"
+egui = "0.27.2"
+macroquad = "0.4.7"
+rand = "0.8.5"
